--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,18 @@ InitTestScene*.unity*
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
+# Default ignored files
+/shelf/
+/workspace.xml
+# Rider ignored files
+/projectSettingsUpdater.xml
+/.idea.BoidSim.iml
+/modules.xml
+/contentModel.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+.plastic/
+.idea/
